working get and put
